# BookStore

./: App.cpp  CMakeLists.txt  Carte.cpp  Carte.h  Cos.cpp  Cos.h  MyList.h  Repo.cpp  Repo.h  Service.cpp  Service.h  TestCarte.cpp  TestCarte.h  TestCos.cpp  TestCos.h  TestList.cpp  TestList.h  TestRepo.cpp  TestRepo.h  TestService.cpp  TestService.h  TestValidator.cpp  TestValidator.h  Tests.cpp  Tests.h  UI.cpp  UI.h  ValidatorCarte.cpp  ValidatorCarte.h  exceptions.h  testexport.csv
.opencppcov/Lab6_7/: Debug_x86.json
Debug/: App.nativecodeanalysis.sarif  App.nativecodeanalysis.xml  Carte.nativecodeanalysis.sarif  Carte.nativecodeanalysis.xml  CodeAnalysisResultManifest.txt  Cos.nativecodeanalysis.sarif  Cos.nativecodeanalysis.xml  Lab6_7.exe.recipe  Lab6_7.vcxproj.FileListAbsolute.txt  NativeCodeAnalysis.read.1.tlog  Repo.nativecodeanalysis.sarif  Repo.nativecodeanalysis.xml  Service.nativecodeanalysis.sarif  Service.nativecodeanalysis.xml  TestCarte.nativecodeanalysis.sarif  TestCos.nativecodeanalysis.sarif  TestCos.nativecodeanalysis.xml  TestRepo.nativecodeanalysis.sarif  TestRepo.nativecodeanalysis.xml  TestService.nativecodeanalysis.sarif  TestService.nativecodeanalysis.xml  TestValidator.nativecodeanalysis.sarif  TestValidator.nativecodeanalysis.xml  Tests.nativecodeanalysis.sarif  Tests.nativecodeanalysis.xml  UI.nativecodeanalysis.sarif  UI.nativecodeanalysis.xml  ValidatorCarte.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc142.idb
Debug/Lab6_7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab6_7.lastbuildstate  link.read.1.tlog  (+2 more)
